feat: creating a new set of java file for each refactoring